<resources>
    <string name="app_name">Phone-SDK</string>
    <string name="meeting">协作</string>
    <string name="meeting_create">发起协作</string>
    <string name="meeting_join">加入协作</string>
    <string name="meeting_task">预约协作</string>
    <string name="meeting_history">历史记录</string>
    <string name="meeting_upcoming">即将开始的协作</string>
    <string name="meeting_processing">进行中</string>
    <string name="meeting_wait">待开始</string>
    <string name="please_input_room_no">请输入房间号</string>
    <string name="meeting_room_no">房间号</string>
    <string name="please_input_9_number_room">请输入9位数字房间号</string>
    <string name="join_meeting_room">加入房间</string>
    <string name="meeting_name">房间名称</string>
    <string name="please_input_room_name">请输入房间名称</string>
    <string name="no_meeting">暂无会议~</string>
    <string name="copy_already">已复制会议号到剪切板</string>
    <string name="meeting_fast_content_hint">%s的快速协作</string>
    <string name="please_input_correct_room_no">请输入正确的房间号</string>
    <string name="toast_permission_camera">请同意相机权限</string>
    <string name="quick_meeting_start">快速会议已发起</string>
    <string name="toast_permission_record_and_camera">请同意录音和相机操作权限</string>
    <string name="please_scan_correct_qr">请扫描正确的二维码</string>
    <string name="start_time">开始时间</string>
    <string name="assist_time">协作时间</string>
    <string name="add_joiner">添加参与者</string>
    <string name="meeting_duration_long">协作时长</string>
    <string name="half_minutes">%d分钟</string>
    <string name="meeting_task_content_hint">%s的预约协作</string>
    <string name="please_select_invitees">请添加参与者</string>
    <string name="meeting_sure">确定</string>
    <string name="meeting_hours">%d小时</string>
    <string name="meeting_minus">%d分钟</string>
    <string name="hour_minutes">%d小时 %d分钟</string>
    <string name="meeting_create_success">预约协作创建成功</string>
    <string name="invitee_numbers">%d人</string>
    <string name="text_search">搜索</string>
    <string name="meeting_save">保存</string>
    <string name="meeting_detail">协作详情</string>
    <string name="meeting_master_ex">发起人：</string>
    <string name="meeting_joiner_avatar">参会人：</string>
    <string name="none">无</string>
    <string name="meeting_no">房间号</string>
    <string name="masterName">发起人</string>
    <string name="join_time">加入时间</string>
    <string name="join_duration">加入时长</string>
    <string name="join_meeting">加入协作</string>
    <string name="chat">聊天</string>
    <string name="history_chat">历史聊天</string>
    <string name="copy_all_info">复制全部信息</string>
    <string name="copy_invitee_url">复制邀请链接</string>
    <string name="room_no">房间号：</string>
    <string name="copy_already_inviteurl">已复制邀请链接到剪切板</string>
    <string name="_2d_2d">%02d:%02d</string>
    <string name="text_scan_qr_code">扫描二维码</string>
    <string name="no_login_please_login">尚未登录，请先登录</string>
</resources>