<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_80000000"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/dp_343"
            android:layout_height="@dimen/dp_170"
            android:background="@drawable/shape_13_ffffff"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:layout_marginBottom="@dimen/dp_12"
                    android:text="@string/please_input_room_no"
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="@dimen/dp_14"
                    android:layout_height="@dimen/dp_14"
                    android:layout_marginEnd="@dimen/dp_22"
                    android:src="@mipmap/ic_meeting_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/color_c4c4c4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_room_no"
                    android:textColor="#ff32354e"
                    android:textSize="16sp" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_content"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_39"
                    android:background="@color/white"
                    android:hint="@string/please_input_9_number_room"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColor="@color/color_141414"
                    android:textColorHint="@color/color_66000000"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_join_meeting"
                android:layout_width="@dimen/dp_300"
                android:layout_height="@dimen/dp_45"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="@drawable/bg_btn_accent"
                android:gravity="center"
                android:text="@string/join_meeting_room"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>