<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/color_ffffff"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:padding="@dimen/dp_13"
                android:src="@mipmap/ic_back_black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/color_000000"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_save"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/meeting_save"
                android:textColor="@color/color_1455f5"
                android:textSize="@dimen/sp_16" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF2F1F6"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_16">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_content"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="@dimen/dp_39"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColor="@color/color_141414"
                    android:textColorHint="@color/color_66000000"
                    android:textSize="@dimen/sp_20"
                    tools:hint="张志凌的协作房间" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_clear"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:src="@mipmap/ic_edit_clear" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:id="@+id/ll_meeting_start_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_weight="1"
                    android:text="@string/start_time"
                    android:textColor="#ff32354e"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:textColor="@color/color_707070"
                    android:textSize="13sp"
                    tools:text="08月23日 14:00" />

                <ImageView
                    android:layout_width="@dimen/dp_12"
                    android:layout_height="@dimen/dp_12"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="@dimen/dp_18"
                    android:layout_weight="0"
                    android:src="@mipmap/ic_meeting_arrow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:background="@color/color_e0e0e0" />

            <LinearLayout
                android:id="@+id/ll_meeting_duration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_weight="1"
                    android:text="@string/meeting_duration_long"
                    android:textColor="#ff32354e"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:textColor="@color/color_707070"
                    android:textSize="13sp"
                    tools:text="30分钟" />

                <ImageView
                    android:layout_width="@dimen/dp_12"
                    android:layout_height="@dimen/dp_12"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="@dimen/dp_18"
                    android:layout_weight="0"
                    android:src="@mipmap/ic_meeting_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_meeting_joiner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_weight="1"
                    android:text="@string/add_joiner"
                    android:textColor="#ff32354e"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tv_invitees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:textColor="@color/color_707070"
                    android:textSize="13sp"
                    tools:text="2人" />

                <ImageView
                    android:layout_width="@dimen/dp_12"
                    android:layout_height="@dimen/dp_12"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="@dimen/dp_18"
                    android:layout_weight="0"
                    android:src="@mipmap/ic_meeting_arrow" />
            </LinearLayout>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>